# nav_ka_github

./: .gitignore  README.md  main.py  pyproject.toml
archive/: README.md
data/: README.md
docs/: gnss_book_order_model_rebuild.md  repo_map.md
docs/gnss_book_ai/: README.md  book.md  manifest.json  outline.json  pages.jsonl  topic_coordinates_time_receivers.md
notebooks/: Large_Scale_Ne_Smooth.csv  RAMC_AOA_Sim_Input.csv  README.md  imu_aided_receiver_dynamics_review.ipynb  nb_ka225_rx_from_real_wkb.py  nb_ka225_rx_from_real_wkb_debug.py  nb_plasma_to_wkb.py  palsm.py  signal_review_overview.ipynb
reports/: build_ka225_receiver_report.sh  build_ka225_receiver_report_docx.py  generate_ka225_receiver_report_assets.py  ka225_receiver_work_report.typ
reports/builders/: build_issue_01_weekly_report.py  build_issue_03_full_context_report.py  build_ka225_receiver_report.sh  build_ka225_receiver_report_docx.py  generate_ka225_receiver_report_assets.py
review/: FILE_INVENTORY.csv  REVIEW_QUEUE.md  receiver_notebook_map.md  signal_generation_to_rx_review.md
scripts/: __init__.py  run_issue_01_truth_dependency_full_stack.py  run_issue_03_textbook_full_correction.py  run_issue_04_imu_aided_full_stack.py  run_ka_multifreq_full_stack.py
src/: issue_01_truth_dependency.py  issue_03_textbook_correction.py  ka_multifreq_receiver_common.py  plasma_field_core.py  plasma_field_plot.py  plasma_wkb_core.py
tools/: export_notebooks_to_docx.py  generate_issue_04_review_report.py  pdf_to_ai_package.py  render_issue03_figures.py  render_loop_design_diagram.py
(+1026 files in other folders)
