[project]
name = "nav-ka-github"
version = "0.1.0"
description = "Ka-band plasma/WKB receiver and navigation research workspace"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.8",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
